# vkernel-userspace

./: .gitignore  llvm_userspace.props
MODPlay/: Makefile  README.md  UNREALPM.S3M  example  main_vk.c  main_vk.cpp  modplay.c  modplay.vcxproj
clownmdemu/: Makefile  README.md  app.cpp  audio.cpp  browser.cpp  common.cpp  frontend.h  hq2x.cpp  hqx.cpp  main.cpp
cpp/: Makefile
cppcompat/: Makefile  main.cpp
doom/: Makefile  config.h  i_main_vk.c  i_sound_vk.c  i_stubs_vk.c  i_system_vk.c  i_timer_vk.c  i_video_vk.c  opl_vk.c
framebuffer/: Makefile  framebuffer.c  framebuffer.vcxproj
framebuffer_text/: Makefile  framebuffer_text.c  framebuffer_text.vcxproj
hello/: Makefile  hello.c  hello.vcxproj
include/: vk.h
libc/: MSVC_PLAN.md  Makefile  crt0.c  float.h  fltused.c  libc.vcxproj  libc_compiler.h  newlib_msvc_compat.h  syscalls.c
minimp3/: Makefile  README.md  main.cpp  minimp3_impl.c
quake/: Makefile  config.h  es_window_vk.c  in_vk.c  main_vk.c  net_drivers_vk.c  net_udp_vk.c  snd_codec_vk.c  snd_vk.c  sys_vk.c  vid_vk.c
quake-src/: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  config.h.in  vcpkg.json
quake-src/.github/ISSUE_TEMPLATE/: bug_report.md  code-quality.md  feature_request.md
quake-src/.github/workflows/: continuous_integration.yml
quake-src/cmake/: CheckDefine.cmake
quake-src/src/: CMakeLists.txt  main.c
quake-src/src/camera/: CMakeLists.txt
quake-src/src/camera/include/: view.h
quake-src/src/camera/src/: chase.c  view.c
quake-src/src/client/: CMakeLists.txt
quake-src/src/client/include/: client.h
quake-src/src/client/src/: cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c
quake-src/src/cmd/: CMakeLists.txt
quake-src/src/cmd/include/: cmd.h
quake-src/src/common/: CMakeLists.txt
quake-src/src/common/include/: common.h  quakedef.h
quake-src/src/common/src/: com_argv.c  com_byte.c  com_ext.c  com_fs.c  com_init.c  com_link.c  com_msg.c  com_sizebuf.c  com_stdio.c  com_stdlib.c  com_string.c  com_token.c  com_va.c
quake-src/src/console/: CMakeLists.txt
quake-src/src/console/include/: console.h  cvar.h
quake-src/src/console/src/: console.c  cvar.c
quake-src/src/crc/: CMakeLists.txt
quake-src/src/crc/include/: crc.h
quake-src/src/crc/src/: crc.c
quake-src/src/end_screen/: CMakeLists.txt
quake-src/src/end_screen/include/: end_screen.h
quake-src/src/end_screen/src/: es_buffer.c  es_buffer.h  es_font.c  es_font.h  es_main.c  es_palette.c  es_palette.h  es_time.c  es_time.h  es_window.c  es_window.h
quake-src/src/end_screen/src/fonts/: README.md  convert-font  large.h  normal.h  small.h
quake-src/src/host/: CMakeLists.txt
quake-src/src/host/include/: host.h
quake-src/src/host/src/: host.c  host_cmd.c
quake-src/src/input/: CMakeLists.txt
quake-src/src/input/include/: input.h  keys.h
quake-src/src/input/src/: in_gamepad.c  in_gamepad.h  in_keyboard.c  in_keyboard.h  in_main.c  in_mouse.c  in_mouse.h  keys.c
quake-src/src/mathlib/: CMakeLists.txt
quake-src/src/mathlib/include/: mathlib.h
quake-src/src/mathlib/src/: mathlib.c
quake-src/src/menu/: CMakeLists.txt
quake-src/src/menu/include/: menu.h
quake-src/src/menu/src/: menu.c
quake-src/src/model/: CMakeLists.txt
quake-src/src/model/include/: bspfile.h  model.h  modelgen.h  spritegn.h
quake-src/src/model/src/: model.c
quake-src/src/net/: CMakeLists.txt
quake-src/src/net/include/: net.h  protocol.h
quake-src/src/net/src/: net_dgrm.c  net_dgrm.h  net_drivers.c  net_loop.c  net_loop.h  net_main.c  net_poll.c  net_poll.h  net_socket.c  net_socket.h  net_udp.c  net_udp.h  net_vcr.c  net_vcr.h
quake-src/src/progs/: CMakeLists.txt
quake-src/src/progs/include/: pr_comp.h  progdefs.h  progs.h
quake-src/src/progs/src/: pr_cmds.c  pr_edict.c  pr_exec.c
quake-src/src/renderer/: CMakeLists.txt
quake-src/src/renderer/include/: d_iface.h  d_local.h  draw.h  r_local.h  r_shared.h  render.h
quake-src/src/renderer/src/: adivtab.h  anorms.h  d_edge.c  d_fill.c  d_init.c  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  draw.c  nonintel.c  r_aclip.c  r_alias.c  r_bsp.c  r_draw.c  r_edge.c  r_efrag.c  r_light.c  r_main.c  r_misc.c  r_part.c  r_sky.c  r_sprite.c  r_surf.c  r_vars.c
quake-src/src/screen/: CMakeLists.txt
quake-src/src/screen/include/: screen.h
quake-src/src/screen/src/: screen.c
quake-src/src/server/: CMakeLists.txt
quake-src/src/server/include/: server.h  world.h
quake-src/src/server/src/: sv_main.c  sv_move.c  sv_phys.c  sv_user.c  sv_world.c
quake-src/src/sound/: CMakeLists.txt
quake-src/src/sound/include/: bgmusic.h  sound.h
quake-src/src/sound/src/: bgmusic.c  snd_codec.c  snd_codec.h  snd_dma.c  snd_flac.c  snd_flac.h  snd_mem.c  snd_mix.c  snd_mp3.c  snd_mp3.h  snd_mp3tag.c  snd_sdl.c  snd_vorbis.c  snd_vorbis.h  snd_wave.c  snd_wave.h
quake-src/src/status_bar/: CMakeLists.txt
quake-src/src/status_bar/include/: sbar.h
quake-src/src/status_bar/src/: sbar.c
quake-src/src/sys/: CMakeLists.txt
quake-src/src/sys/include/: sys.h
quake-src/src/sys/src/: sys.c
quake-src/src/video/: CMakeLists.txt
quake-src/src/video/include/: vid.h
quake-src/src/video/src/: vid_buffers.c  vid_buffers.h  vid_main.c  vid_menu.c  vid_menu.h  vid_modes.c  vid_modes.h  vid_window.c  vid_window.h
quake-src/src/wad/: CMakeLists.txt
quake-src/src/wad/include/: wad.h
quake-src/src/wad/src/: wad.c
ramfs_reader/: Makefile  ramfs_reader.cpp  ramfs_reader.vcxproj
raytracer/: Makefile  raytracer.c  raytracer.vcxproj
rotozoom/: Makefile  rotozoom.c  rotozoom.vcxproj
shell/: Makefile  applet_registry.cpp  shell.c  shell.cpp  shell.vcxproj  shell_exec.txt  shell_support.cpp
snes9x/: Makefile  app.cpp  audio.cpp  browser.cpp  common.cpp  compat_stubs.cpp  frontend.h  main.cpp
sr_cube/: Makefile  sr_cube.c
vgui/: Makefile  console_log.cpp  console_log.h  cxxabi_stubs.cpp  dynamic_plugin_loader.cpp  dynamic_plugin_loader.h  imgui_config.h  imgui_impl_vk.cpp  imgui_impl_vk.h  kobj_panel.cpp  kobj_panel.h  (+24 more)
(+172 files in other folders)
